<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainNavigationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/main_navigation_user_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_navigation_user_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_navigation_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/buttonAppearance"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:onClick="searchForASong"
                android:text="@string/main_navigation_action_number_two" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/buttonAppearance"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/main_navigation_action_number_three" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/buttonAppearance"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/main_navigation_action_number_four"
                android:onClick="searchArtist"/>

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/buttonAppearance"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:onClick="returnToMainActivity"
                android:text="@string/main_navigation_action_return" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_navigation_currently_playing_title"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/main_navigation_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/main_navigation_song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_artist"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/main_navigation_song_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_album"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>