<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gzhang.SpotifyPlus.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_readme"
        android:orderInCategory="100"
        android:title="@string/action_readme"
        app:showAsAction="never"
        android:onClick="showAppDescription"/>
    <item
        android:id="@+id/action_close_app"
        android:orderInCategory="100"
        android:title="@string/action_close_app"
        app:showAsAction="never"
        android:onClick="closeApp"/>
</menu>
