<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cell_search_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell_search_song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_artist"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cell_search_song_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_album"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/cell_search_album_cover"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

        </ImageView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>