<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaySongActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/play_song_activity_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/play_song_activity_song_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
            android:id="@+id/play_song_activity_song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_song_activity_song_artist"
            android:textSize="20sp"
            android:textStyle="bold"/>

            <TextView
                android:id="@+id/play_song_activity_song_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_song_activity_song_album"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/play_song_activity_song_lyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/play_song_activity_song_album_cover"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/play_song_activity_song_find_lyrics"
                android:layout_gravity="center_horizontal"
                android:onClick="getLyrics"/>
        </LinearLayout>


</android.support.design.widget.CoordinatorLayout>